Fix shifted css

--- a/src/theme/_header.scss
+++ b/src/theme/_header.scss
@@ -270,7 +270,7 @@
     &.active::before,
     &:hover::before {
       position: absolute;
-      bottom: -46px;
+      bottom: -55px;
       width: 100%;
       border-bottom: 9px solid $black;
       content: '';
@@ -322,7 +322,7 @@
       left: 50%;
       width: 100vw;
       max-width: initial;
-      margin-top: 35px;
+      margin-top: 45px;
       margin-right: -50vw;
       margin-left: -50vw;
     }
